--- a/lang/nl_NL.lang
+++ b/lang/nl_NL.lang
@@ -1,9 +1,9 @@
-commands.myst.tpx.usage=/tpx [onderwerp:speler] <doel:speler | doel:dimensie [x y z]>
-commands.myst.tpx.fail.nosubject=Ongeldige teleportatie onderwerp. Geen teleport.
+commands.myst.tpx.usage=/tpx [subject:speler] <doel:speler | doel:dimensie [x y z]>
+commands.myst.tpx.fail.nosubject=Geen geldig teleportatie subject. Geen teleportatie.
 commands.myst.tpx.fail.noworld=Wereld voor dimensie %d niet gevonden. Geen teleportatie.
 
 commands.myst.time.usage=/time <set|add> <waarde> [dimensie]
-commands.myst.time.fail.noworld=Doel dimensie is niet geladen
+commands.myst.time.fail.noworld=Doel-dimensie is niet geladen
 commands.myst.time.set=Tijd verzet naar %d in dimensie %d
 commands.myst.time.set.all=Tijd verzet naar %d in alle dimensies
 commands.myst.time.added=%d toegevoegd aan de tijd in dimensie %d
@@ -20,12 +20,12 @@ commands.myst.permissions.usage=/myst-permissions <speler> <restrict|permit> <en
 commands.myst.chunkregen.usage=/myst-regenchunk [bereik]
 
 tile.myst.receptacle.name=Boekenhouder
-tile.myst.unstable.name=Onstabiliteits Effect
-tile.myst.unstable.blue.name=Blauwe Onstabiliteit
-tile.myst.unstable.red.name=Rode Onstabiliteit
-tile.myst.unstable.purple.name=Paarse Onstabiliteit
-tile.myst.unstable.white.name=Witte Onstabiliteit
-tile.myst.unstable.black.name=Zwarte Onstabiliteit
+tile.myst.unstable.name=Instabiliteitseffect
+tile.myst.unstable.blue.name=Blauwe Instabiliteit
+tile.myst.unstable.red.name=Rode Instabiliteit
+tile.myst.unstable.purple.name=Paarse Instabiliteit
+tile.myst.unstable.white.name=Witte Instabiliteit
+tile.myst.unstable.black.name=Zwarte Instabiliteit
 tile.myst.crystal.name=Kristal
 tile.myst.lectern.name=Lessenaar
 tile.myst.bookstand.name=Boekenstand
@@ -33,84 +33,84 @@ tile.myst.linkmodifier.name=Verbindingswijziger
 tile.myst.bookbinder.name=Boekbinder
 tile.myst.inkmixer.name=Inkt Mixer
 tile.myst.linkportal.name=Verbindingsportaal
-tile.myst.starfissure.name=Sterren Kloof
+tile.myst.starfissure.name=Sterrenkloof
 tile.myst.writing_desk.name=Schrijftafel
 
 item.myst.agebook.name=Beschrijvend Boek
 item.myst.linkbook.name=Verbindingsboek
 item.myst.notebook.name=Notitieboek
 item.myst.page.blank.name=Blanke Pagina
-item.myst.page.panel.name=Link Paneel
+item.myst.page.panel.name=Linkpaneel
 item.myst.page.symbol.name=Pagina
-item.myst.unlinkedbook.name=Ongelinkte Verbindingsboek
+item.myst.unlinkedbook.name=Ongelinkt Verbindingsboek
 item.myst.writingdesk.name=Schrijftafel
-items.myst.writingdesk.top.name=Schrijftafel Bord
-item.myst.vial.name=Inkt Flesje
+items.myst.writingdesk.top.name=Achterkant Schrijftafel
+item.myst.vial.name=Inktflesje
 
 itemGroup.mystcraft.common=Mystcraft
-itemGroup.mystcraft.pages=Mystcraft Pagina's
+itemGroup.mystcraft.pages=Mystcraft-pagina's
 
 fluid.myst.ink.black=Zwarte Inkt
 tile.myst.fluid.myst.ink.black.name=Zwarte Inkt
 
-achievement.myst.symbol=Kleine stap van de reis
+achievement.myst.symbol=Kleine Stap van de Reis
 achievement.myst.symbol.desc=Vind een symbool
-achievement.myst.write=De kunst: Een grondlaag
-achievement.myst.write.desc=Kopiëer een symbool
-achievement.myst.agebook=Enkele reis
-achievement.myst.agebook.desc=Creëer een beschrijvend boek. Vergeet niet dat het een enkele reis is!
-achievement.myst.linkbook=Bind een draad
-achievement.myst.linkbook.desc=Creëer een verbindingsboek. Goed, nu kan je terug gaan!
+achievement.myst.write=De Kunst: Een Introductie
+achievement.myst.write.desc=Kopiëer een Symbool
+achievement.myst.agebook=Enkele Reis
+achievement.myst.agebook.desc=Creëer een Beschrijvend Boek. Vergeet niet dat het een enkele reis is!
+achievement.myst.linkbook=Knoop een Touwtje
+achievement.myst.linkbook.desc=Creëer een Verbindingsboek. Goed, nu kan je terug gaan!
 achievement.myst.quinn=Noem mij maar Quinn
-achievement.myst.quinn.desc=Reis naar een dimensie zonder een verbindingsboek. Hoop maar dat er een uitgang is!
+achievement.myst.quinn.desc=Reis naar een dimensie zonder een Verbindingsboek. Hopen dat er een uitgang is!
 
 linkeffect.disarm.name=Ontwapenen
 linkeffect.generateplatform.name=Genereer Platform
-linkeffect.intralinking.name=Intra-Dimensioneel Linken
-linkeffect.maintainmomentum.name=Momentum behouden
+linkeffect.intralinking.name=Intra-Dimensioneel Linkend
+linkeffect.maintainmomentum.name=Momentum Behouden
 linkeffect.relative.name=Relatieve Link
 
-myst.symbol.BioConHuge.name=Gigantische Biomen
-myst.symbol.BioConLarge.name=Grote Biomen
-myst.symbol.BioConMedium.name=Middelmatige Biomen
-myst.symbol.BioConNative.name=Normale Bioom Bestuurder
-myst.symbol.BioConSingle.name=Enkel Bioom
-myst.symbol.BioConSmall.name=Klein Bioom
-myst.symbol.BioConTiled.name=Getegelde Biomen
-myst.symbol.BioConTiny.name=Minescule Biomen
+myst.symbol.BioConHuge.name=Gigantische Klimaatgebieden
+myst.symbol.BioConLarge.name=Grote Klimaatgebieden
+myst.symbol.BioConMedium.name=Middelmatige Klimaatgebieden
+myst.symbol.BioConNative.name=Normale Klimaat Bestuurder
+myst.symbol.BioConSingle.name=Enkel Klimaatgebied
+myst.symbol.BioConSmall.name=Kleine Klimaatgebieden
+myst.symbol.BioConTiled.name=Diagonaal-gestreepte Klimaatgebieden
+myst.symbol.BioConTiny.name=Minuscule Klimaatgebieden
 myst.symbol.Caves.name=Grotten
-myst.symbol.ColorCloud.name=Wolken Kleur
-myst.symbol.ColorCloudNat.name=Natuurlijke Wolken Kleur
-myst.symbol.ColorFog.name=Mist Kleur
-myst.symbol.ColorFogNat.name=Natuurlijke Mist Kleur
-myst.symbol.ColorFoliage.name=Blader Kleur
-myst.symbol.ColorFoliageNat.name=Natuurlijke Blader Kleur
-myst.symbol.ColorGrass.name=Gras Kleur
-myst.symbol.ColorGrassNat.name=Natuurlijke Gras Kleur
-myst.symbol.ColorHorizon.name=Zonsondergangs Kleur
-myst.symbol.ColorSky.name=Lucht Kleur
-myst.symbol.ColorSkyNat.name=Natuurlijke Lucht Kleur
-myst.symbol.ColorSkyNight.name=Nacht Lucht Kleur
-myst.symbol.ColorWater.name=Water Kleur
-myst.symbol.ColorWaterNat.name=Natuurlijke Water Kleur
-myst.symbol.CryForm.name=Kristalleine Formaties
-myst.symbol.DenseOres.name=Dichte Erts
+myst.symbol.ColorCloud.name=Wolkenkleur
+myst.symbol.ColorCloudNat.name=Natuurlijke Wolkenkleur
+myst.symbol.ColorFog.name=Mistkleur
+myst.symbol.ColorFogNat.name=Natuurlijke Mistkleur
+myst.symbol.ColorFoliage.name=Bladkleur
+myst.symbol.ColorFoliageNat.name=Natuurlijke Bladkleur
+myst.symbol.ColorGrass.name=Graskleur
+myst.symbol.ColorGrassNat.name=Natuurlijke Graskleur
+myst.symbol.ColorHorizon.name=Zonsondergangs-kleur
+myst.symbol.ColorSky.name=Luchtkleur
+myst.symbol.ColorSkyNat.name=Natuurlijke Luchtkleur
+myst.symbol.ColorSkyNight.name=Nachtlucht-kleur
+myst.symbol.ColorWater.name=Waterkleur
+myst.symbol.ColorWaterNat.name=Natuurlijke Waterkleur
+myst.symbol.CryForm.name=Kristalformaties
+myst.symbol.DenseOres.name=Meer Erts
 myst.symbol.Dungeons.name=Kerkers
 myst.symbol.EnvAccel.name=Versneld
 myst.symbol.EnvExplosions.name=Spontane Explosies
 myst.symbol.EnvLightning.name=Bliksem
 myst.symbol.EnvMeteor.name=Meteorieten
-myst.symbol.EnvScorch.name=Brandend Oppervlak
+myst.symbol.EnvScorch.name=Verschroeid Landschap
 myst.symbol.Flat.name=Platte Wereld
 myst.symbol.FloatIslands.name=Vliegende Eilanden
 myst.symbol.GenSpikes.name=Stekels
 myst.symbol.HugeTrees.name=Gigantische Bomen
 myst.symbol.LakesDeep.name=Diepe Meren
-myst.symbol.LakesSurface.name=Oppervlakte Meren
-myst.symbol.LightingBright.name=Felle Belichting
-myst.symbol.LightingDark.name=Donkere Belichting
-myst.symbol.LightingNormal.name=Normale Belichting
-myst.symbol.Mineshafts.name=Mijnschaften
+myst.symbol.LakesSurface.name=Oppervlaktemeren
+myst.symbol.LightingBright.name=Felle Verlichting
+myst.symbol.LightingDark.name=Donkere Verlichting
+myst.symbol.LightingNormal.name=Normale Verlichting
+myst.symbol.Mineshafts.name=Mijnschachten
 myst.symbol.ModClear.name=Verwijder Modificaties
 myst.symbol.ModGradient.name=Helling
 myst.symbol.MoonDark.name=Donkere Maan
@@ -123,7 +123,7 @@ myst.symbol.PvPOff.name=Geen PvP
 myst.symbol.Rainbow.name=Regenboog
 myst.symbol.Ravines.name=Ravijnen
 myst.symbol.Skylands.name=Luchtlanden
-myst.symbol.StarFissure.name=Sterren Scheur
+myst.symbol.StarFissure.name=Sterrenkloof
 myst.symbol.StarsDark.name=Donkere Sterren
 myst.symbol.StarsEndSky.name=Ender Sterrenveld
 myst.symbol.StarsNormal.name=Normale Sterren
@@ -131,19 +131,19 @@ myst.symbol.StarsTwinkle.name=Twinkelende Sterren
 myst.symbol.Strongholds.name=Burchten
 myst.symbol.SunDark.name=Donkere Zon
 myst.symbol.SunNormal.name=Normale Zon
-myst.symbol.Tendrils.name=Scheuten
+myst.symbol.Tendrils.name=Ranken
 myst.symbol.TerModSpheres.name=Bollen
 myst.symbol.TerrainAmplified.name=Versterkte Normale Wereld
-myst.symbol.TerrainEnd.name=Eilanden-Wereld
-myst.symbol.TerrainNether.name=Grotten-Wereld
-myst.symbol.TerrainNormal.name=Standaard-Wereld
+myst.symbol.TerrainEnd.name=Eilandenwereld
+myst.symbol.TerrainNether.name=Grottenwereld
+myst.symbol.TerrainNormal.name=Standaardwereld
 myst.symbol.WeatherCloudy.name=Regenachtig
-myst.symbol.WeatherFast.name=Snel Weer
+myst.symbol.WeatherFast.name=Versneld Weer
 myst.symbol.WeatherNorm.name=Normaal Weer
 myst.symbol.WeatherOff.name=Geen Weer
 myst.symbol.WeatherOn.name=Eeuwig Weer
 myst.symbol.WeatherRain.name=Eeuwige Regen
-myst.symbol.WeatherSlow.name=Langzaam Weer
+myst.symbol.WeatherSlow.name=Vertraagd Weer
 myst.symbol.WeatherSnow.name=Eeuwige Sneeuw
 myst.symbol.WeatherStorm.name=Eeuwige Storm
 myst.symbol.Villages.name=Dorpen
