Updates localizations from dev environment
Changes mystsymbol to myst.symbol
Adds some new localization keys to the en_US localization

--- a/lang/en_US.lang
+++ b/lang/en_US.lang
@@ -19,6 +19,10 @@ commands.myst.meteor.usage=/myst-spawnmeteor
 commands.myst.permissions.usage=/myst-permissions <player> <restrict|permit> <entry|depart> <all|dimid>
 commands.myst.chunkregen.usage=/myst-regenchunk [range] [dimId] [chunkX] [chunkZ]
 
+entity.Mystcraft.myst.book.name=Book
+entity.Mystcraft.myst.block.name=Falling Block
+entity.Mystcraft.myst.meteor.name=Meteor
+
 tile.myst.receptacle.name=Book Receptacle
 tile.myst.unstable.name=Decay Effect
 tile.myst.unstable.blue.name=Blue Decay
@@ -38,7 +42,9 @@ tile.myst.writing_desk.name=Writing Desk
 
 item.myst.agebook.name=Descriptive Book
 item.myst.linkbook.name=Linking book
-item.myst.notebook.name=Notebook
+item.myst.folder.name=Collation Folder
+item.myst.portfolio.name=Symbol Portfolio
+item.myst.booster.name=Sealed Notebook
 item.myst.page.blank.name=Blank Page
 item.myst.page.panel.name=Link Panel Page
 item.myst.page.symbol.name=Page
@@ -46,6 +52,7 @@ item.myst.unlinkedbook.name=Unlinked Link Book
 item.myst.writingdesk.name=Writing Desk
 item.myst.writingdesk.top.name=Writing Desk Backboard
 item.myst.vial.name=Ink Vial
+item.myst.glasses.name=XComp's Glasses
 
 itemGroup.mystcraft.common=Mystcraft
 itemGroup.mystcraft.pages=Mystcraft Pages
@@ -70,81 +77,90 @@ linkeffect.intralinking.name=Intra-Linking
 linkeffect.maintainmomentum.name=Maintain Momentum
 linkeffect.relative.name=Relative Link
 
-mystsymbol.BioConHuge.name=Huge Biomes
-mystsymbol.BioConLarge.name=Large Biomes
-mystsymbol.BioConMedium.name=Medium Biomes
-mystsymbol.BioConNative.name=Native Biome Controller
-mystsymbol.BioConSingle.name=Single Biome
-mystsymbol.BioConSmall.name=Small Biomes
-mystsymbol.BioConTiled.name=Tiled Biomes
-mystsymbol.BioConTiny.name=Tiny Biomes
-mystsymbol.Caves.name=Caves
-mystsymbol.ColorCloud.name=Cloud Color
-mystsymbol.ColorCloudNat.name=Natural Cloud Color
-mystsymbol.ColorFog.name=Fog Color
-mystsymbol.ColorFogNat.name=Natural Fog Color
-mystsymbol.ColorFoliage.name=Foliage Color
-mystsymbol.ColorFoliageNat.name=Natural Foliage Color
-mystsymbol.ColorGrass.name=Grass Color
-mystsymbol.ColorGrassNat.name=Natural Grass Color
-mystsymbol.ColorHorizon.name=Sunset Color
-mystsymbol.ColorSky.name=Sky Color
-mystsymbol.ColorSkyNat.name=Natural Sky Color
-mystsymbol.ColorSkyNight.name=Night Sky Color
-mystsymbol.ColorWater.name=Water Color
-mystsymbol.ColorWaterNat.name=Natural Water Color
-mystsymbol.CryForm.name=Crystalline Formations
-mystsymbol.DenseOres.name=Dense Ores
-mystsymbol.Dungeons.name=Dungeons
-mystsymbol.EnvAccel.name=Accelerated
-mystsymbol.EnvExplosions.name=Spontaneous Explosions
-mystsymbol.EnvLightning.name=Lightning
-mystsymbol.EnvMeteor.name=Meteors
-mystsymbol.EnvScorch.name=Scorched Surface
-mystsymbol.Flat.name=Flat World
-mystsymbol.FloatIslands.name=Floating Islands
-mystsymbol.GenSpikes.name=Spikes
-mystsymbol.HugeTrees.name=Huge Trees
-mystsymbol.LakesDeep.name=Deep Lakes
-mystsymbol.LakesSurface.name=Surface Lakes
-mystsymbol.LightingBright.name=Bright Lighting
-mystsymbol.LightingDark.name=Dark Lighting
-mystsymbol.LightingNormal.name=Normal Lighting
-mystsymbol.Mineshafts.name=Mineshafts
-mystsymbol.ModClear.name=Clear Modifiers
-mystsymbol.ModGradient.name=Gradient
-mystsymbol.MoonDark.name=Dark Moon
-mystsymbol.MoonNormal.name=Normal Moon
-mystsymbol.NetherFort.name=Nether Fortress
-mystsymbol.NoHorizon.name=Boundless Sky
-mystsymbol.NoSea.name=No Seas
-mystsymbol.Obelisks.name=Obelisks
-mystsymbol.PvPOff.name=Anti-PvP
-mystsymbol.Rainbow.name=Rainbow
-mystsymbol.Ravines.name=Ravines
-mystsymbol.Skylands.name=Skylands
-mystsymbol.StarFissure.name=Star Fissure
-mystsymbol.StarsDark.name=Dark Stars
-mystsymbol.StarsEndSky.name=Ender Starfield
-mystsymbol.StarsNormal.name=Normal Stars
-mystsymbol.StarsTwinkle.name=Twinkling Stars
-mystsymbol.Strongholds.name=Strongholds
-mystsymbol.SunDark.name=Dark Sun
-mystsymbol.SunNormal.name=Normal Sun
-mystsymbol.Tendrils.name=Tendrils
-mystsymbol.TerModSpheres.name=Spheres
-mystsymbol.TerrainAmplified.name=Amplified Normal World
-mystsymbol.TerrainEnd.name=Island World
-mystsymbol.TerrainNether.name=Cave World
-mystsymbol.TerrainNormal.name=Standard World
-mystsymbol.WeatherCloudy.name=Overcast
-mystsymbol.WeatherFast.name=Fast Weather
-mystsymbol.WeatherNorm.name=Normal Weather
-mystsymbol.WeatherOff.name=No Weather
-mystsymbol.WeatherOn.name=Eternal Weather
-mystsymbol.WeatherRain.name=Eternal Rain
-mystsymbol.WeatherSlow.name=Slow Weather
-mystsymbol.WeatherSnow.name=Eternal Snow
-mystsymbol.WeatherStorm.name=Eternal Storm
-mystsymbol.Villages.name=Villages
-mystsymbol.Void.name=Void World
+instability.bonus.death=%s has been killed by %s, activating bonus stability!
+instability.bonus.death.partial=%s has died.  Unlocking part of the bonus stability.  Kill them personally to unlock all of it!
+instability.bonus.death.alert=%s has entered the age.  Kill them in order to unlock a temporary stability bonus in this age!
+
+instability.bonus.troll.death=%s has been killed, resetting the instability penalty!
+instability.bonus.troll.alert=%s has entered the age.  The age will slowly become less stable!  Kill them to reset this!
+instability.bonus.troll.left=%s has left the age.  The stability penalty will slowly dissipate.
+
+myst.symbol.BioConGrid.name=Grid-form Biome Distribution
+myst.symbol.BioConHuge.name=Huge Biome Distribution
+myst.symbol.BioConLarge.name=Large Biome Distribution
+myst.symbol.BioConMedium.name=Medium Biome Distribution
+myst.symbol.BioConNative.name=Native Biome Distribution
+myst.symbol.BioConSingle.name=Single Biome Distribution
+myst.symbol.BioConSmall.name=Small Biome Distribution
+myst.symbol.BioConTiled.name=Tiled Biome Distribution
+myst.symbol.BioConTiny.name=Tiny Biome Distribution
+myst.symbol.Caves.name=Caves
+myst.symbol.ColorCloud.name=Cloud Color
+myst.symbol.ColorCloudNat.name=Natural Cloud Color
+myst.symbol.ColorFog.name=Fog Color
+myst.symbol.ColorFogNat.name=Natural Fog Color
+myst.symbol.ColorFoliage.name=Foliage Color
+myst.symbol.ColorFoliageNat.name=Natural Foliage Color
+myst.symbol.ColorGrass.name=Grass Color
+myst.symbol.ColorGrassNat.name=Natural Grass Color
+myst.symbol.ColorHorizon.name=Sunset Color
+myst.symbol.ColorSky.name=Sky Color
+myst.symbol.ColorSkyNat.name=Natural Sky Color
+myst.symbol.ColorSkyNight.name=Night Sky Color
+myst.symbol.ColorWater.name=Water Color
+myst.symbol.ColorWaterNat.name=Natural Water Color
+myst.symbol.CryForm.name=Crystalline Formations
+myst.symbol.DenseOres.name=Dense Ores
+myst.symbol.Dungeons.name=Dungeons
+myst.symbol.EnvAccel.name=Accelerated
+myst.symbol.EnvExplosions.name=Spontaneous Explosions
+myst.symbol.EnvLightning.name=Lightning
+myst.symbol.EnvMeteor.name=Meteors
+myst.symbol.EnvScorch.name=Scorched Surface
+myst.symbol.Flat.name=Flat World
+myst.symbol.FloatIslands.name=Floating Islands
+myst.symbol.GenSpikes.name=Spikes
+myst.symbol.HugeTrees.name=Huge Trees
+myst.symbol.LakesDeep.name=Deep Lakes
+myst.symbol.LakesSurface.name=Surface Lakes
+myst.symbol.LightingBright.name=Bright Lighting
+myst.symbol.LightingDark.name=Dark Lighting
+myst.symbol.LightingNormal.name=Normal Lighting
+myst.symbol.Mineshafts.name=Mineshafts
+myst.symbol.ModClear.name=Clear Modifiers
+myst.symbol.ModGradient.name=Gradient
+myst.symbol.MoonDark.name=Dark Moon
+myst.symbol.MoonNormal.name=Normal Moon
+myst.symbol.NetherFort.name=Nether Fortress
+myst.symbol.NoHorizon.name=Boundless Sky
+myst.symbol.NoSea.name=No Seas
+myst.symbol.Obelisks.name=Obelisks
+myst.symbol.PvPOff.name=Anti-PvP
+myst.symbol.Rainbow.name=Rainbow
+myst.symbol.Ravines.name=Ravines
+myst.symbol.Skylands.name=Skylands
+myst.symbol.StarFissure.name=Star Fissure
+myst.symbol.StarsDark.name=Dark Stars
+myst.symbol.StarsEndSky.name=Ender Starfield
+myst.symbol.StarsNormal.name=Normal Stars
+myst.symbol.StarsTwinkle.name=Twinkling Stars
+myst.symbol.Strongholds.name=Strongholds
+myst.symbol.SunDark.name=Dark Sun
+myst.symbol.SunNormal.name=Normal Sun
+myst.symbol.Tendrils.name=Tendrils
+myst.symbol.TerModSpheres.name=Spheres
+myst.symbol.TerrainAmplified.name=Amplified Normal World
+myst.symbol.TerrainEnd.name=Island World
+myst.symbol.TerrainNether.name=Cave World
+myst.symbol.TerrainNormal.name=Standard World
+myst.symbol.WeatherCloudy.name=Overcast
+myst.symbol.WeatherFast.name=Fast Weather
+myst.symbol.WeatherNorm.name=Normal Weather
+myst.symbol.WeatherOff.name=No Weather
+myst.symbol.WeatherOn.name=Eternal Weather
+myst.symbol.WeatherRain.name=Eternal Rain
+myst.symbol.WeatherSlow.name=Slow Weather
+myst.symbol.WeatherSnow.name=Eternal Snow
+myst.symbol.WeatherStorm.name=Eternal Storm
+myst.symbol.Villages.name=Villages
+myst.symbol.Void.name=Void World
