--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Intra-Linking
 linkeffect.maintainmomentum.name=Schwung beibehalten
 linkeffect.relative.name=Relative Verbindung
 
-mystsymbol.BioConHuge.name=Riesige Biome
-mystsymbol.BioConLarge.name=Große Biome
-mystsymbol.BioConMedium.name=Mittelgroße Biome
-mystsymbol.BioConNative.name=Native Biomkontrolle
-mystsymbol.BioConSingle.name=Einzelnes Biom
-mystsymbol.BioConSmall.name=Kleine Biome
-mystsymbol.BioConTiled.name=Gekachelte Biome
-mystsymbol.BioConTiny.name=Winzige Biome
-mystsymbol.Caves.name=Höhlen
-mystsymbol.ColorCloud.name=Wolkenfarbe
-mystsymbol.ColorCloudNat.name=Natürliche Wolkenfarbe
-mystsymbol.ColorFog.name=Nebelfarbe
-mystsymbol.ColorFogNat.name=Natürliche Nebelfarbe
-mystsymbol.ColorFoliage.name=Blattwerkfarbe
-mystsymbol.ColorFoliageNat.name=Natürliche Blattwerkfarbe
-mystsymbol.ColorGrass.name=Grasfarbe
-mystsymbol.ColorGrassNat.name=Natürliche Grasfarbe
-mystsymbol.ColorHorizon.name=Sonnenuntergangsfarbe
-mystsymbol.ColorSky.name=Himmelsfarbe
-mystsymbol.ColorSkyNat.name=Natürliche Himmelsfarbe
-mystsymbol.ColorSkyNight.name=Nachthimmelsfarbe
-mystsymbol.ColorWater.name=Wasserfarbe
-mystsymbol.ColorWaterNat.name=Natürliche Wasserfarbe
-mystsymbol.CryForm.name=Kristallformationen
-mystsymbol.DenseOres.name=Dichte Erze
-mystsymbol.Dungeons.name=Verliese
-mystsymbol.EnvAccel.name=Beschleunigt
-mystsymbol.EnvExplosions.name=Spontane Explosionen
-mystsymbol.EnvLightning.name=Blitz und Donner
-mystsymbol.EnvMeteor.name=Meteore
-mystsymbol.EnvScorch.name=Versengte Oberfläche
-mystsymbol.Flat.name=Flache Welt
-mystsymbol.FloatIslands.name=Schwebende Inseln
-mystsymbol.GenSpikes.name=Stacheln
-mystsymbol.HugeTrees.name=Riesige Bäume
-mystsymbol.LakesDeep.name=Untergrundseen
-mystsymbol.LakesSurface.name=Oberflächenseen
-mystsymbol.LightingBright.name=Helles Licht
-mystsymbol.LightingDark.name=Dunkles Licht
-mystsymbol.LightingNormal.name=Normales Licht
-mystsymbol.Mineshafts.name=Minenschächte
-mystsymbol.ModClear.name=Modifizierungen entfernen
-mystsymbol.ModGradient.name=Farbverlauf
-mystsymbol.MoonDark.name=Dunkler Mond
-mystsymbol.MoonNormal.name=Normaler Mond
-mystsymbol.NetherFort.name=Netherfestung
-mystsymbol.NoHorizon.name=Grenzenloser Himmel
-mystsymbol.NoSea.name=Keine Seen
-mystsymbol.Obelisks.name=Obelisken
-mystsymbol.PvPOff.name=Kein PVP
-mystsymbol.Rainbow.name=Regenbogen
-mystsymbol.Ravines.name=Schluchten
-mystsymbol.Skylands.name=Himmelslande
-mystsymbol.StarFissure.name=Sternenkluft
-mystsymbol.StarsDark.name=Dunkle Sterne
-mystsymbol.StarsEndSky.name=Endersternenhimmel
-mystsymbol.StarsNormal.name=Normale Sterne
-mystsymbol.StarsTwinkle.name=Funkelnde Sterne
-mystsymbol.Strongholds.name=Festungen
-mystsymbol.SunDark.name=Dunkle Sonne
-mystsymbol.SunNormal.name=Normale Sonne
-mystsymbol.Tendrils.name=Ranken
-mystsymbol.TerModSpheres.name=Sphären
-mystsymbol.TerrainAmplified.name=Zerklüftete Welt
-mystsymbol.TerrainEnd.name=Inselwelt
-mystsymbol.TerrainNether.name=Höhlenwelt
-mystsymbol.TerrainNormal.name=Standardwelt
-mystsymbol.WeatherCloudy.name=Bewölkt
-mystsymbol.WeatherFast.name=Schnelles Wetter
-mystsymbol.WeatherNorm.name=Normales Wetter
-mystsymbol.WeatherOff.name=Kein Wetter
-mystsymbol.WeatherOn.name=Ewiges Wetter
-mystsymbol.WeatherRain.name=Ewiger Regen
-mystsymbol.WeatherSlow.name=Langsames Wetter
-mystsymbol.WeatherSnow.name=Ewiger Schnee
-mystsymbol.WeatherStorm.name=Ewiger Sturm
-mystsymbol.Villages.name=Dörfer
-mystsymbol.Void.name=Leere Welt
+myst.symbol.BioConHuge.name=Riesige Biome
+myst.symbol.BioConLarge.name=Große Biome
+myst.symbol.BioConMedium.name=Mittelgroße Biome
+myst.symbol.BioConNative.name=Native Biomkontrolle
+myst.symbol.BioConSingle.name=Einzelnes Biom
+myst.symbol.BioConSmall.name=Kleine Biome
+myst.symbol.BioConTiled.name=Gekachelte Biome
+myst.symbol.BioConTiny.name=Winzige Biome
+myst.symbol.Caves.name=Höhlen
+myst.symbol.ColorCloud.name=Wolkenfarbe
+myst.symbol.ColorCloudNat.name=Natürliche Wolkenfarbe
+myst.symbol.ColorFog.name=Nebelfarbe
+myst.symbol.ColorFogNat.name=Natürliche Nebelfarbe
+myst.symbol.ColorFoliage.name=Blattwerkfarbe
+myst.symbol.ColorFoliageNat.name=Natürliche Blattwerkfarbe
+myst.symbol.ColorGrass.name=Grasfarbe
+myst.symbol.ColorGrassNat.name=Natürliche Grasfarbe
+myst.symbol.ColorHorizon.name=Sonnenuntergangsfarbe
+myst.symbol.ColorSky.name=Himmelsfarbe
+myst.symbol.ColorSkyNat.name=Natürliche Himmelsfarbe
+myst.symbol.ColorSkyNight.name=Nachthimmelsfarbe
+myst.symbol.ColorWater.name=Wasserfarbe
+myst.symbol.ColorWaterNat.name=Natürliche Wasserfarbe
+myst.symbol.CryForm.name=Kristallformationen
+myst.symbol.DenseOres.name=Dichte Erze
+myst.symbol.Dungeons.name=Verliese
+myst.symbol.EnvAccel.name=Beschleunigt
+myst.symbol.EnvExplosions.name=Spontane Explosionen
+myst.symbol.EnvLightning.name=Blitz und Donner
+myst.symbol.EnvMeteor.name=Meteore
+myst.symbol.EnvScorch.name=Versengte Oberfläche
+myst.symbol.Flat.name=Flache Welt
+myst.symbol.FloatIslands.name=Schwebende Inseln
+myst.symbol.GenSpikes.name=Stacheln
+myst.symbol.HugeTrees.name=Riesige Bäume
+myst.symbol.LakesDeep.name=Untergrundseen
+myst.symbol.LakesSurface.name=Oberflächenseen
+myst.symbol.LightingBright.name=Helles Licht
+myst.symbol.LightingDark.name=Dunkles Licht
+myst.symbol.LightingNormal.name=Normales Licht
+myst.symbol.Mineshafts.name=Minenschächte
+myst.symbol.ModClear.name=Modifizierungen entfernen
+myst.symbol.ModGradient.name=Farbverlauf
+myst.symbol.MoonDark.name=Dunkler Mond
+myst.symbol.MoonNormal.name=Normaler Mond
+myst.symbol.NetherFort.name=Netherfestung
+myst.symbol.NoHorizon.name=Grenzenloser Himmel
+myst.symbol.NoSea.name=Keine Seen
+myst.symbol.Obelisks.name=Obelisken
+myst.symbol.PvPOff.name=Kein PVP
+myst.symbol.Rainbow.name=Regenbogen
+myst.symbol.Ravines.name=Schluchten
+myst.symbol.Skylands.name=Himmelslande
+myst.symbol.StarFissure.name=Sternenkluft
+myst.symbol.StarsDark.name=Dunkle Sterne
+myst.symbol.StarsEndSky.name=Endersternenhimmel
+myst.symbol.StarsNormal.name=Normale Sterne
+myst.symbol.StarsTwinkle.name=Funkelnde Sterne
+myst.symbol.Strongholds.name=Festungen
+myst.symbol.SunDark.name=Dunkle Sonne
+myst.symbol.SunNormal.name=Normale Sonne
+myst.symbol.Tendrils.name=Ranken
+myst.symbol.TerModSpheres.name=Sphären
+myst.symbol.TerrainAmplified.name=Zerklüftete Welt
+myst.symbol.TerrainEnd.name=Inselwelt
+myst.symbol.TerrainNether.name=Höhlenwelt
+myst.symbol.TerrainNormal.name=Standardwelt
+myst.symbol.WeatherCloudy.name=Bewölkt
+myst.symbol.WeatherFast.name=Schnelles Wetter
+myst.symbol.WeatherNorm.name=Normales Wetter
+myst.symbol.WeatherOff.name=Kein Wetter
+myst.symbol.WeatherOn.name=Ewiges Wetter
+myst.symbol.WeatherRain.name=Ewiger Regen
+myst.symbol.WeatherSlow.name=Langsames Wetter
+myst.symbol.WeatherSnow.name=Ewiger Schnee
+myst.symbol.WeatherStorm.name=Ewiger Sturm
+myst.symbol.Villages.name=Dörfer
+myst.symbol.Void.name=Leere Welt
