--- a/lang/fr_FR.lang
+++ b/lang/fr_FR.lang
@@ -58,81 +58,81 @@ achievement.myst.linkbook.desc=Fabriquer un Livre de lien. Bien, maintenant vous
 achievement.myst.quinn=Appellez-moi Quinn
 achievement.myst.quinn.desc=Voyager dans une dimension sans Livre de lien. Espérez qu'il y ai une sortie !
 
-mystsymbol.BioConHuge.name=Biomes Immense
-mystsymbol.BioConLarge.name=Grand Biomes
-mystsymbol.BioConMedium.name=Biomes Moyen
-mystsymbol.BioConNative.name=Controleur de Biome natif
-mystsymbol.BioConSingle.name=Biome Unique
-mystsymbol.BioConSmall.name=Petit Biomes
-mystsymbol.BioConTiled.name=Biomes Carrelés
-mystsymbol.BioConTiny.name=Biomes Minuscules
-mystsymbol.Caves.name=Cavernes
-mystsymbol.ColorCloud.name=Couleur du Ciel
-mystsymbol.ColorCloudNat.name=Couleur du Ciel Naturelle
-mystsymbol.ColorFog.name=Couleur du Brouillard
-mystsymbol.ColorFogNat.name=Couleur du Brouillard Naturelle
-mystsymbol.ColorFoliage.name=Couleur du Feuillage
-mystsymbol.ColorFoliageNat.name=Couleur du Feuillage Naturelle
-mystsymbol.ColorGrass.name=Couleur de l'herbe
-mystsymbol.ColorGrassNat.name=Couleur de l'herbe Naturelle
-mystsymbol.ColorHorizon.name=Couleur du Couché de Soleil
-mystsymbol.ColorSky.name=Couleur du Ciel
-mystsymbol.ColorSkyNat.name=Couleur du Ciel Naturelle
-mystsymbol.ColorSkyNight.name=Couleur du Ciel Nocturne
-mystsymbol.ColorWater.name=Couleur de l'eau
-mystsymbol.ColorWaterNat.name=Couleur de l'eau Naturelle
-mystsymbol.CryForm.name=Formations Cristallines
-mystsymbol.DenseOres.name=Minerais Denses
-mystsymbol.Dungeons.name=Donjons
-mystsymbol.EnvAccel.name=Acceléré
-mystsymbol.EnvExplosions.name=Explosions Spontanées
-mystsymbol.EnvLightning.name=Foudre
-mystsymbol.EnvMeteor.name=Météores
-mystsymbol.EnvScorch.name=Surface Brulante
-mystsymbol.Flat.name=Monde Plat
-mystsymbol.FloatIslands.name=Iles Flottantes
-mystsymbol.GenSpikes.name=Épines
-mystsymbol.HugeTrees.name=Grands Arbres
-mystsymbol.LakesDeep.name=Lacs des Pronfondeurs
-mystsymbol.LakesSurface.name=Lacs de Surface
-mystsymbol.LightingBright.name=Éclairage Important
-mystsymbol.LightingDark.name=Éclairage Faible
-mystsymbol.LightingNormal.name=Éclairage Normal
-mystsymbol.Mineshafts.name=Puits de mines
-mystsymbol.ModClear.name=Effacer les Modifications
-mystsymbol.ModGradient.name=Gradient
-mystsymbol.MoonDark.name=Lune Sombre
-mystsymbol.MoonNormal.name=Lune Normale
-mystsymbol.NetherFort.name=Forteresse du Nether
-mystsymbol.NoHorizon.name=Ciel Infini
-mystsymbol.NoSea.name=Pas de Mer
-mystsymbol.Obelisks.name=Obélisques
-mystsymbol.PvPOff.name=Anti-PvP
-mystsymbol.Rainbow.name=Arc-en-Ciel
-mystsymbol.Ravines.name=Ravines
-mystsymbol.Skylands.name=Mondes Aeriens
-mystsymbol.StarFissure.name=Fissure Stellaire
-mystsymbol.StarsDark.name=Étoiles Sombres
-mystsymbol.StarsEndSky.name=Ciel de l'Ender
-mystsymbol.StarsNormal.name=Étoiles Normales
-mystsymbol.StarsTwinkle.name=Étoiles Clignotantes
-mystsymbol.Strongholds.name=Forteresses
-mystsymbol.SunDark.name=Soleil Sombre
-mystsymbol.SunNormal.name=Soleil Normal
-mystsymbol.Tendrils.name=Vrilles
-mystsymbol.TerModSpheres.name=Spheres
-mystsymbol.TerrainAmplified.name=Monde Normal Amplifié
-mystsymbol.TerrainEnd.name=Monde Aquatique
-mystsymbol.TerrainNether.name=Monde Souterrain
-mystsymbol.TerrainNormal.name=Monde Classique
-mystsymbol.WeatherCloudy.name=Nuageux
-mystsymbol.WeatherFast.name=Météo Rapide
-mystsymbol.WeatherNorm.name=Météo Normale
-mystsymbol.WeatherOff.name=Sans Météo
-mystsymbol.WeatherOn.name=Météo Figée
-mystsymbol.WeatherRain.name=Pluie Eternelle
-mystsymbol.WeatherSlow.name=Météo Lente
-mystsymbol.WeatherSnow.name=Neige Eternelle
-mystsymbol.WeatherStorm.name=Tempete Eternelle
-mystsymbol.Villages.name=Villages
-mystsymbol.Void.name=Monde Vide
+myst.symbol.BioConHuge.name=Biomes Immense
+myst.symbol.BioConLarge.name=Grand Biomes
+myst.symbol.BioConMedium.name=Biomes Moyen
+myst.symbol.BioConNative.name=Controleur de Biome natif
+myst.symbol.BioConSingle.name=Biome Unique
+myst.symbol.BioConSmall.name=Petit Biomes
+myst.symbol.BioConTiled.name=Biomes Carrelés
+myst.symbol.BioConTiny.name=Biomes Minuscules
+myst.symbol.Caves.name=Cavernes
+myst.symbol.ColorCloud.name=Couleur du Ciel
+myst.symbol.ColorCloudNat.name=Couleur du Ciel Naturelle
+myst.symbol.ColorFog.name=Couleur du Brouillard
+myst.symbol.ColorFogNat.name=Couleur du Brouillard Naturelle
+myst.symbol.ColorFoliage.name=Couleur du Feuillage
+myst.symbol.ColorFoliageNat.name=Couleur du Feuillage Naturelle
+myst.symbol.ColorGrass.name=Couleur de l'herbe
+myst.symbol.ColorGrassNat.name=Couleur de l'herbe Naturelle
+myst.symbol.ColorHorizon.name=Couleur du Couché de Soleil
+myst.symbol.ColorSky.name=Couleur du Ciel
+myst.symbol.ColorSkyNat.name=Couleur du Ciel Naturelle
+myst.symbol.ColorSkyNight.name=Couleur du Ciel Nocturne
+myst.symbol.ColorWater.name=Couleur de l'eau
+myst.symbol.ColorWaterNat.name=Couleur de l'eau Naturelle
+myst.symbol.CryForm.name=Formations Cristallines
+myst.symbol.DenseOres.name=Minerais Denses
+myst.symbol.Dungeons.name=Donjons
+myst.symbol.EnvAccel.name=Acceléré
+myst.symbol.EnvExplosions.name=Explosions Spontanées
+myst.symbol.EnvLightning.name=Foudre
+myst.symbol.EnvMeteor.name=Météores
+myst.symbol.EnvScorch.name=Surface Brulante
+myst.symbol.Flat.name=Monde Plat
+myst.symbol.FloatIslands.name=Iles Flottantes
+myst.symbol.GenSpikes.name=Épines
+myst.symbol.HugeTrees.name=Grands Arbres
+myst.symbol.LakesDeep.name=Lacs des Pronfondeurs
+myst.symbol.LakesSurface.name=Lacs de Surface
+myst.symbol.LightingBright.name=Éclairage Important
+myst.symbol.LightingDark.name=Éclairage Faible
+myst.symbol.LightingNormal.name=Éclairage Normal
+myst.symbol.Mineshafts.name=Puits de mines
+myst.symbol.ModClear.name=Effacer les Modifications
+myst.symbol.ModGradient.name=Gradient
+myst.symbol.MoonDark.name=Lune Sombre
+myst.symbol.MoonNormal.name=Lune Normale
+myst.symbol.NetherFort.name=Forteresse du Nether
+myst.symbol.NoHorizon.name=Ciel Infini
+myst.symbol.NoSea.name=Pas de Mer
+myst.symbol.Obelisks.name=Obélisques
+myst.symbol.PvPOff.name=Anti-PvP
+myst.symbol.Rainbow.name=Arc-en-Ciel
+myst.symbol.Ravines.name=Ravines
+myst.symbol.Skylands.name=Mondes Aeriens
+myst.symbol.StarFissure.name=Fissure Stellaire
+myst.symbol.StarsDark.name=Étoiles Sombres
+myst.symbol.StarsEndSky.name=Ciel de l'Ender
+myst.symbol.StarsNormal.name=Étoiles Normales
+myst.symbol.StarsTwinkle.name=Étoiles Clignotantes
+myst.symbol.Strongholds.name=Forteresses
+myst.symbol.SunDark.name=Soleil Sombre
+myst.symbol.SunNormal.name=Soleil Normal
+myst.symbol.Tendrils.name=Vrilles
+myst.symbol.TerModSpheres.name=Spheres
+myst.symbol.TerrainAmplified.name=Monde Normal Amplifié
+myst.symbol.TerrainEnd.name=Monde Aquatique
+myst.symbol.TerrainNether.name=Monde Souterrain
+myst.symbol.TerrainNormal.name=Monde Classique
+myst.symbol.WeatherCloudy.name=Nuageux
+myst.symbol.WeatherFast.name=Météo Rapide
+myst.symbol.WeatherNorm.name=Météo Normale
+myst.symbol.WeatherOff.name=Sans Météo
+myst.symbol.WeatherOn.name=Météo Figée
+myst.symbol.WeatherRain.name=Pluie Eternelle
+myst.symbol.WeatherSlow.name=Météo Lente
+myst.symbol.WeatherSnow.name=Neige Eternelle
+myst.symbol.WeatherStorm.name=Tempete Eternelle
+myst.symbol.Villages.name=Villages
+myst.symbol.Void.name=Monde Vide
