--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=Intra-collegante
 linkeffect.maintainmomentum.name=Mantieni momentum
 linkeffect.relative.name=Collegamento relativo
 
-mystsymbol.BioConHuge.name=Biomi giganti
-mystsymbol.BioConLarge.name=Biomi grandi
-mystsymbol.BioConMedium.name=Biomi medi
-mystsymbol.BioConNative.name=Controllo di biomi nativo
-mystsymbol.BioConSingle.name=Bioma singolo
-mystsymbol.BioConSmall.name=Biomi piccoli
-mystsymbol.BioConTiled.name=Biomi a scacchiera
-mystsymbol.BioConTiny.name=Biomi minuscoli
-mystsymbol.Caves.name=Caverne
-mystsymbol.ColorCloud.name=Colore delle nuvole
-mystsymbol.ColorCloudNat.name=Colore delle nuvole naturale
-mystsymbol.ColorFog.name=Colore della nebbia
-mystsymbol.ColorFogNat.name=Colore della nebbia naturale
-mystsymbol.ColorFoliage.name=Colore delle foglie
-mystsymbol.ColorFoliageNat.name=Colore delle foglie naturale
-mystsymbol.ColorGrass.name=Colore dell'erba
-mystsymbol.ColorGrassNat.name=Colore dell'erba naturale
-mystsymbol.ColorHorizon.name=Colore del tramonto
-mystsymbol.ColorSky.name=Colore del cielo
-mystsymbol.ColorSkyNat.name=Colore del cielo naturale
-mystsymbol.ColorSkyNight.name=Colore del cielo notturno
-mystsymbol.ColorWater.name=Colore dell'acqua
-mystsymbol.ColorWaterNat.name=Colore dell'acqua naturale
-mystsymbol.CryForm.name=Formazioni cristalline
-mystsymbol.DenseOres.name=Minerali densi
-mystsymbol.Dungeons.name=Dungeon
-mystsymbol.EnvAccel.name=Accelerato
-mystsymbol.EnvExplosions.name=Esplosioni spontanee
-mystsymbol.EnvLightning.name=Fulmini
-mystsymbol.EnvMeteor.name=Meteore
-mystsymbol.EnvScorch.name=Superficie bruciante
-mystsymbol.Flat.name=Mondo piatto
-mystsymbol.FloatIslands.name=Isole galleggianti
-mystsymbol.GenSpikes.name=Spuntoni
-mystsymbol.HugeTrees.name=Alberi giganti
-mystsymbol.LakesDeep.name=Laghi profondi
-mystsymbol.LakesSurface.name=Laghi superficiali
-mystsymbol.LightingBright.name=Illuminazione accesa
-mystsymbol.LightingDark.name=Illuminazione scura
-mystsymbol.LightingNormal.name=Illuminazione normale
-mystsymbol.Mineshafts.name=Miniere
-mystsymbol.ModClear.name=Eliminia modificatori
-mystsymbol.ModGradient.name=Pendenza
-mystsymbol.MoonDark.name=Luna scura
-mystsymbol.MoonNormal.name=Luna normale
-mystsymbol.NetherFort.name=Fortezze degl'Inferi
-mystsymbol.NoHorizon.name=Cielo senza confini
-mystsymbol.NoSea.name=Nessun mare
-mystsymbol.Obelisks.name=Obelischi
-mystsymbol.PvPOff.name=Anti-PvP
-mystsymbol.Rainbow.name=Arcobaleno
-mystsymbol.Ravines.name=Rovine
-mystsymbol.Skylands.name=Terre del cielo
-mystsymbol.StarFissure.name=Fessura nelle stelle
-mystsymbol.StarsDark.name=Stelle scure
-mystsymbol.StarsEndSky.name=Stelle dell'End
-mystsymbol.StarsNormal.name=Stelle normali
-mystsymbol.StarsTwinkle.name=Stelle scintillanti
-mystsymbol.Strongholds.name=Roccaforti
-mystsymbol.SunDark.name=Sole scuro
-mystsymbol.SunNormal.name=Sole normale
-mystsymbol.Tendrils.name=Vittici
-mystsymbol.TerModSpheres.name=Sfere
-mystsymbol.TerrainAmplified.name=Mondo amplificato
-mystsymbol.TerrainEnd.name=Mondo d'isole
-mystsymbol.TerrainNether.name=Mondo di caverne
-mystsymbol.TerrainNormal.name=Mondo normale
-mystsymbol.WeatherCloudy.name=Cielo coperto
-mystsymbol.WeatherFast.name=Tempo atmosferico veloce
-mystsymbol.WeatherNorm.name=Tempo atmosferico normale
-mystsymbol.WeatherOff.name=Nessun tempo atmosferico
-mystsymbol.WeatherOn.name=Tempo atmosferico eterno
-mystsymbol.WeatherRain.name=Pioggia eterna
-mystsymbol.WeatherSlow.name=Tempo atmosferico lento
-mystsymbol.WeatherSnow.name=Neve eterna
-mystsymbol.WeatherStorm.name=Tempesta eterna
-mystsymbol.Villages.name=Villaggi
-mystsymbol.Void.name=Mondo void
+myst.symbol.BioConHuge.name=Biomi giganti
+myst.symbol.BioConLarge.name=Biomi grandi
+myst.symbol.BioConMedium.name=Biomi medi
+myst.symbol.BioConNative.name=Controllo di biomi nativo
+myst.symbol.BioConSingle.name=Bioma singolo
+myst.symbol.BioConSmall.name=Biomi piccoli
+myst.symbol.BioConTiled.name=Biomi a scacchiera
+myst.symbol.BioConTiny.name=Biomi minuscoli
+myst.symbol.Caves.name=Caverne
+myst.symbol.ColorCloud.name=Colore delle nuvole
+myst.symbol.ColorCloudNat.name=Colore delle nuvole naturale
+myst.symbol.ColorFog.name=Colore della nebbia
+myst.symbol.ColorFogNat.name=Colore della nebbia naturale
+myst.symbol.ColorFoliage.name=Colore delle foglie
+myst.symbol.ColorFoliageNat.name=Colore delle foglie naturale
+myst.symbol.ColorGrass.name=Colore dell'erba
+myst.symbol.ColorGrassNat.name=Colore dell'erba naturale
+myst.symbol.ColorHorizon.name=Colore del tramonto
+myst.symbol.ColorSky.name=Colore del cielo
+myst.symbol.ColorSkyNat.name=Colore del cielo naturale
+myst.symbol.ColorSkyNight.name=Colore del cielo notturno
+myst.symbol.ColorWater.name=Colore dell'acqua
+myst.symbol.ColorWaterNat.name=Colore dell'acqua naturale
+myst.symbol.CryForm.name=Formazioni cristalline
+myst.symbol.DenseOres.name=Minerali densi
+myst.symbol.Dungeons.name=Dungeon
+myst.symbol.EnvAccel.name=Accelerato
+myst.symbol.EnvExplosions.name=Esplosioni spontanee
+myst.symbol.EnvLightning.name=Fulmini
+myst.symbol.EnvMeteor.name=Meteore
+myst.symbol.EnvScorch.name=Superficie bruciante
+myst.symbol.Flat.name=Mondo piatto
+myst.symbol.FloatIslands.name=Isole galleggianti
+myst.symbol.GenSpikes.name=Spuntoni
+myst.symbol.HugeTrees.name=Alberi giganti
+myst.symbol.LakesDeep.name=Laghi profondi
+myst.symbol.LakesSurface.name=Laghi superficiali
+myst.symbol.LightingBright.name=Illuminazione accesa
+myst.symbol.LightingDark.name=Illuminazione scura
+myst.symbol.LightingNormal.name=Illuminazione normale
+myst.symbol.Mineshafts.name=Miniere
+myst.symbol.ModClear.name=Eliminia modificatori
+myst.symbol.ModGradient.name=Pendenza
+myst.symbol.MoonDark.name=Luna scura
+myst.symbol.MoonNormal.name=Luna normale
+myst.symbol.NetherFort.name=Fortezze degl'Inferi
+myst.symbol.NoHorizon.name=Cielo senza confini
+myst.symbol.NoSea.name=Nessun mare
+myst.symbol.Obelisks.name=Obelischi
+myst.symbol.PvPOff.name=Anti-PvP
+myst.symbol.Rainbow.name=Arcobaleno
+myst.symbol.Ravines.name=Rovine
+myst.symbol.Skylands.name=Terre del cielo
+myst.symbol.StarFissure.name=Fessura nelle stelle
+myst.symbol.StarsDark.name=Stelle scure
+myst.symbol.StarsEndSky.name=Stelle dell'End
+myst.symbol.StarsNormal.name=Stelle normali
+myst.symbol.StarsTwinkle.name=Stelle scintillanti
+myst.symbol.Strongholds.name=Roccaforti
+myst.symbol.SunDark.name=Sole scuro
+myst.symbol.SunNormal.name=Sole normale
+myst.symbol.Tendrils.name=Vittici
+myst.symbol.TerModSpheres.name=Sfere
+myst.symbol.TerrainAmplified.name=Mondo amplificato
+myst.symbol.TerrainEnd.name=Mondo d'isole
+myst.symbol.TerrainNether.name=Mondo di caverne
+myst.symbol.TerrainNormal.name=Mondo normale
+myst.symbol.WeatherCloudy.name=Cielo coperto
+myst.symbol.WeatherFast.name=Tempo atmosferico veloce
+myst.symbol.WeatherNorm.name=Tempo atmosferico normale
+myst.symbol.WeatherOff.name=Nessun tempo atmosferico
+myst.symbol.WeatherOn.name=Tempo atmosferico eterno
+myst.symbol.WeatherRain.name=Pioggia eterna
+myst.symbol.WeatherSlow.name=Tempo atmosferico lento
+myst.symbol.WeatherSnow.name=Neve eterna
+myst.symbol.WeatherStorm.name=Tempesta eterna
+myst.symbol.Villages.name=Villaggi
+myst.symbol.Void.name=Mondo void
