--- a/lang/ru_RU.lang
+++ b/lang/ru_RU.lang
@@ -83,82 +83,82 @@ instability.bonus.troll.death=%s был убит, сброс штрафа нес
 instability.bonus.troll.alert=%s вошёл в измерение. Измерение будет постепенно становиться менее стабильным! Убейте его, чтобы сбросить этот штраф!
 instability.bonus.troll.left=%s покинул измерение. Стабильность будет медленно рассеиваться.
 
-mystsymbol.BioConGrid.name=Биом в форме сетки
-mystsymbol.BioConHuge.name=Огромные биомы
-mystsymbol.BioConLarge.name=Большие биомы
-mystsymbol.BioConMedium.name=Средние биомы
-mystsymbol.BioConNative.name=Стандартные биомы
-mystsymbol.BioConSingle.name=Одиночный биом
-mystsymbol.BioConSmall.name=Маленький биом
-mystsymbol.BioConTiled.name=Плиточные биомы
-mystsymbol.BioConTiny.name=Крохотные биомы
-mystsymbol.Caves.name=Пещеры
-mystsymbol.ColorCloud.name=Цвет облаков
-mystsymbol.ColorCloudNat.name=Природный цвет облаков
-mystsymbol.ColorFog.name=Цвет тумана
-mystsymbol.ColorFogNat.name=Природный цвет тумана
-mystsymbol.ColorFoliage.name=Цвет листвы
-mystsymbol.ColorFoliageNat.name=Природный цвет листвы
-mystsymbol.ColorGrass.name=Цвет травы
-mystsymbol.ColorGrassNat.name=Природный цвет травы
-mystsymbol.ColorHorizon.name=Цвет заката
-mystsymbol.ColorSky.name=Цвет неба
-mystsymbol.ColorSkyNat.name=Природный цвет неба
-mystsymbol.ColorSkyNight.name=Ночной цвет неба
-mystsymbol.ColorWater.name=Цвет воды
-mystsymbol.ColorWaterNat.name=Природный цвет воды
-mystsymbol.CryForm.name=Кристаллические образования
-mystsymbol.DenseOres.name=Густые руды
-mystsymbol.Dungeons.name=Подземелья
-mystsymbol.EnvAccel.name=Ускоренный
-mystsymbol.EnvExplosions.name=Спонтанные взрывы
-mystsymbol.EnvLightning.name=Освещение
-mystsymbol.EnvMeteor.name=Метеоры
-mystsymbol.EnvScorch.name=Выжженная поверхность
-mystsymbol.Flat.name=Плоский мир
-mystsymbol.FloatIslands.name=Плавучие острова
-mystsymbol.GenSpikes.name=Шипы
-mystsymbol.HugeTrees.name=Огромные деревья
-mystsymbol.LakesDeep.name=Глубокие озёра
-mystsymbol.LakesSurface.name=Поверхностные озёра
-mystsymbol.LightingBright.name=Яркое освещение
-mystsymbol.LightingDark.name=Тёмное освещение
-mystsymbol.LightingNormal.name=Обычное освещение
-mystsymbol.Mineshafts.name=Шахты
-mystsymbol.ModClear.name=Чистые модификаторы
-mystsymbol.ModGradient.name=Градиент
-mystsymbol.MoonDark.name=Тёмная Луна
-mystsymbol.MoonNormal.name=Обычная Луна
-mystsymbol.NetherFort.name=Крепости Нижнего мира
-mystsymbol.NoHorizon.name=Бескрайнее небо
-mystsymbol.NoSea.name=Без морей
-mystsymbol.Obelisks.name=Обелиски
-mystsymbol.PvPOff.name=Анти-PvP
-mystsymbol.Rainbow.name=Радуга
-mystsymbol.Ravines.name=Овраги
-mystsymbol.Skylands.name=Парящие острова
-mystsymbol.StarFissure.name=Звёздная трещина
-mystsymbol.StarsDark.name=Тёмные звёзды
-mystsymbol.StarsEndSky.name=Звёздный Край
-mystsymbol.StarsNormal.name=Обычные звёзды
-mystsymbol.StarsTwinkle.name=Мерцающие звёзды
-mystsymbol.Strongholds.name=Крепости
-mystsymbol.SunDark.name=Тёмное Солнце
-mystsymbol.SunNormal.name=Обычное Солнце
-mystsymbol.Tendrils.name=Корни
-mystsymbol.TerModSpheres.name=Сферы
-mystsymbol.TerrainAmplified.name=Расширенный обычный мир
-mystsymbol.TerrainEnd.name=Мир-остров
-mystsymbol.TerrainNether.name=Мир-пещера
-mystsymbol.TerrainNormal.name=Обычный мир
-mystsymbol.WeatherCloudy.name=Облачность
-mystsymbol.WeatherFast.name=Быстрая погода
-mystsymbol.WeatherNorm.name=Обычная погода
-mystsymbol.WeatherOff.name=Без погоды
-mystsymbol.WeatherOn.name=Вечная погода
-mystsymbol.WeatherRain.name=Вечный дождь
-mystsymbol.WeatherSlow.name=Медленная погода
-mystsymbol.WeatherSnow.name=Вечный снег
-mystsymbol.WeatherStorm.name=Вечный шторм
-mystsymbol.Villages.name=Деревни
-mystsymbol.Void.name=Пустотный мир
+myst.symbol.BioConGrid.name=Биом в форме сетки
+myst.symbol.BioConHuge.name=Огромные биомы
+myst.symbol.BioConLarge.name=Большие биомы
+myst.symbol.BioConMedium.name=Средние биомы
+myst.symbol.BioConNative.name=Стандартные биомы
+myst.symbol.BioConSingle.name=Одиночный биом
+myst.symbol.BioConSmall.name=Маленький биом
+myst.symbol.BioConTiled.name=Плиточные биомы
+myst.symbol.BioConTiny.name=Крохотные биомы
+myst.symbol.Caves.name=Пещеры
+myst.symbol.ColorCloud.name=Цвет облаков
+myst.symbol.ColorCloudNat.name=Природный цвет облаков
+myst.symbol.ColorFog.name=Цвет тумана
+myst.symbol.ColorFogNat.name=Природный цвет тумана
+myst.symbol.ColorFoliage.name=Цвет листвы
+myst.symbol.ColorFoliageNat.name=Природный цвет листвы
+myst.symbol.ColorGrass.name=Цвет травы
+myst.symbol.ColorGrassNat.name=Природный цвет травы
+myst.symbol.ColorHorizon.name=Цвет заката
+myst.symbol.ColorSky.name=Цвет неба
+myst.symbol.ColorSkyNat.name=Природный цвет неба
+myst.symbol.ColorSkyNight.name=Ночной цвет неба
+myst.symbol.ColorWater.name=Цвет воды
+myst.symbol.ColorWaterNat.name=Природный цвет воды
+myst.symbol.CryForm.name=Кристаллические образования
+myst.symbol.DenseOres.name=Густые руды
+myst.symbol.Dungeons.name=Подземелья
+myst.symbol.EnvAccel.name=Ускоренный
+myst.symbol.EnvExplosions.name=Спонтанные взрывы
+myst.symbol.EnvLightning.name=Освещение
+myst.symbol.EnvMeteor.name=Метеоры
+myst.symbol.EnvScorch.name=Выжженная поверхность
+myst.symbol.Flat.name=Плоский мир
+myst.symbol.FloatIslands.name=Плавучие острова
+myst.symbol.GenSpikes.name=Шипы
+myst.symbol.HugeTrees.name=Огромные деревья
+myst.symbol.LakesDeep.name=Глубокие озёра
+myst.symbol.LakesSurface.name=Поверхностные озёра
+myst.symbol.LightingBright.name=Яркое освещение
+myst.symbol.LightingDark.name=Тёмное освещение
+myst.symbol.LightingNormal.name=Обычное освещение
+myst.symbol.Mineshafts.name=Шахты
+myst.symbol.ModClear.name=Чистые модификаторы
+myst.symbol.ModGradient.name=Градиент
+myst.symbol.MoonDark.name=Тёмная Луна
+myst.symbol.MoonNormal.name=Обычная Луна
+myst.symbol.NetherFort.name=Крепости Нижнего мира
+myst.symbol.NoHorizon.name=Бескрайнее небо
+myst.symbol.NoSea.name=Без морей
+myst.symbol.Obelisks.name=Обелиски
+myst.symbol.PvPOff.name=Анти-PvP
+myst.symbol.Rainbow.name=Радуга
+myst.symbol.Ravines.name=Овраги
+myst.symbol.Skylands.name=Парящие острова
+myst.symbol.StarFissure.name=Звёздная трещина
+myst.symbol.StarsDark.name=Тёмные звёзды
+myst.symbol.StarsEndSky.name=Звёздный Край
+myst.symbol.StarsNormal.name=Обычные звёзды
+myst.symbol.StarsTwinkle.name=Мерцающие звёзды
+myst.symbol.Strongholds.name=Крепости
+myst.symbol.SunDark.name=Тёмное Солнце
+myst.symbol.SunNormal.name=Обычное Солнце
+myst.symbol.Tendrils.name=Корни
+myst.symbol.TerModSpheres.name=Сферы
+myst.symbol.TerrainAmplified.name=Расширенный обычный мир
+myst.symbol.TerrainEnd.name=Мир-остров
+myst.symbol.TerrainNether.name=Мир-пещера
+myst.symbol.TerrainNormal.name=Обычный мир
+myst.symbol.WeatherCloudy.name=Облачность
+myst.symbol.WeatherFast.name=Быстрая погода
+myst.symbol.WeatherNorm.name=Обычная погода
+myst.symbol.WeatherOff.name=Без погоды
+myst.symbol.WeatherOn.name=Вечная погода
+myst.symbol.WeatherRain.name=Вечный дождь
+myst.symbol.WeatherSlow.name=Медленная погода
+myst.symbol.WeatherSnow.name=Вечный снег
+myst.symbol.WeatherStorm.name=Вечный шторм
+myst.symbol.Villages.name=Деревни
+myst.symbol.Void.name=Пустотный мир
