--- a/lang/zh_CN.lang
+++ b/lang/zh_CN.lang
@@ -70,81 +70,81 @@ linkeffect.intralinking.name=时代内链接
 linkeffect.maintainmomentum.name=保持动力
 linkeffect.relative.name=相关链接
 
-mystsymbol.BioConHuge.name=巨型生物群系
-mystsymbol.BioConLarge.name=大型生物群系
-mystsymbol.BioConMedium.name=中型生物群系
-mystsymbol.BioConNative.name=本地生物群系控制器
-mystsymbol.BioConSingle.name=单一生物群系
-mystsymbol.BioConSmall.name=小型生物群系
-mystsymbol.BioConTiled.name=附加生物群系
-mystsymbol.BioConTiny.name=微型生物群系
-mystsymbol.Caves.name=洞穴
-mystsymbol.ColorCloud.name=云朵颜色
-mystsymbol.ColorCloudNat.name=天然云朵颜色
-mystsymbol.ColorFog.name=雾颜色
-mystsymbol.ColorFogNat.name=天然雾颜色
-mystsymbol.ColorFoliage.name=植物颜色
-mystsymbol.ColorFoliageNat.name=天然植物颜色
-mystsymbol.ColorGrass.name=草颜色
-mystsymbol.ColorGrassNat.name=天然草颜色
-mystsymbol.ColorHorizon.name=日落颜色
-mystsymbol.ColorSky.name=天空颜色
-mystsymbol.ColorSkyNat.name=天然天空颜色
-mystsymbol.ColorSkyNight.name=夜空颜色
-mystsymbol.ColorWater.name=水颜色
-mystsymbol.ColorWaterNat.name=天然水颜色
-mystsymbol.CryForm.name=水晶生成
-mystsymbol.DenseOres.name=密集矿物
-mystsymbol.Dungeons.name=地牢
-mystsymbol.EnvAccel.name=加速
-mystsymbol.EnvExplosions.name=随机爆炸
-mystsymbol.EnvLightning.name=闪电
-mystsymbol.EnvMeteor.name=陨石坑
-mystsymbol.EnvScorch.name=燃烧大地
-mystsymbol.Flat.name=平坦世界
-mystsymbol.FloatIslands.name=浮岛
-mystsymbol.GenSpikes.name=尖塔
-mystsymbol.HugeTrees.name=参天巨树
-mystsymbol.LakesDeep.name=幽深湖泊
-mystsymbol.LakesSurface.name=地表湖泊
-mystsymbol.LightingBright.name=明亮光照
-mystsymbol.LightingDark.name=暗淡光照
-mystsymbol.LightingNormal.name=正常光照
-mystsymbol.Mineshafts.name=矿井
-mystsymbol.ModClear.name=清除修改
-mystsymbol.ModGradient.name=渐变
-mystsymbol.MoonDark.name=深色月亮
-mystsymbol.MoonNormal.name=正常月亮
-mystsymbol.NetherFort.name=下界要塞
-mystsymbol.NoHorizon.name=无边天空
-mystsymbol.NoSea.name=无海洋
-mystsymbol.Obelisks.name=方尖碑
-mystsymbol.PvPOff.name=反PvP
-mystsymbol.Rainbow.name=彩虹
-mystsymbol.Ravines.name=峡谷
-mystsymbol.Skylands.name=空岛
-mystsymbol.StarFissure.name=星之裂痕
-mystsymbol.StarsDark.name=深色星星
-mystsymbol.StarsEndSky.name=末影粒子效果
-mystsymbol.StarsNormal.name=正常星星
-mystsymbol.StarsTwinkle.name=闪烁星星
-mystsymbol.Strongholds.name=要塞
-mystsymbol.SunDark.name=深色太阳
-mystsymbol.SunNormal.name=正常太阳
-mystsymbol.Tendrils.name=卷须
-mystsymbol.TerModSpheres.name=球体
-mystsymbol.TerrainAmplified.name=放大化正常世界
-mystsymbol.TerrainEnd.name=岛屿世界
-mystsymbol.TerrainNether.name=洞穴世界
-mystsymbol.TerrainNormal.name=普通世界
-mystsymbol.WeatherCloudy.name=阴天
-mystsymbol.WeatherFast.name=快速变换天气
-mystsymbol.WeatherNorm.name=正常天气
-mystsymbol.WeatherOff.name=无天气
-mystsymbol.WeatherOn.name=永久天气
-mystsymbol.WeatherRain.name=永久雨天
-mystsymbol.WeatherSlow.name=慢速变换天气
-mystsymbol.WeatherSnow.name=永久雪天
-mystsymbol.WeatherStorm.name=永久风暴
-mystsymbol.Villages.name=村落
-mystsymbol.Void.name=虚空世界
+myst.symbol.BioConHuge.name=巨型生物群系
+myst.symbol.BioConLarge.name=大型生物群系
+myst.symbol.BioConMedium.name=中型生物群系
+myst.symbol.BioConNative.name=本地生物群系控制器
+myst.symbol.BioConSingle.name=单一生物群系
+myst.symbol.BioConSmall.name=小型生物群系
+myst.symbol.BioConTiled.name=附加生物群系
+myst.symbol.BioConTiny.name=微型生物群系
+myst.symbol.Caves.name=洞穴
+myst.symbol.ColorCloud.name=云朵颜色
+myst.symbol.ColorCloudNat.name=天然云朵颜色
+myst.symbol.ColorFog.name=雾颜色
+myst.symbol.ColorFogNat.name=天然雾颜色
+myst.symbol.ColorFoliage.name=植物颜色
+myst.symbol.ColorFoliageNat.name=天然植物颜色
+myst.symbol.ColorGrass.name=草颜色
+myst.symbol.ColorGrassNat.name=天然草颜色
+myst.symbol.ColorHorizon.name=日落颜色
+myst.symbol.ColorSky.name=天空颜色
+myst.symbol.ColorSkyNat.name=天然天空颜色
+myst.symbol.ColorSkyNight.name=夜空颜色
+myst.symbol.ColorWater.name=水颜色
+myst.symbol.ColorWaterNat.name=天然水颜色
+myst.symbol.CryForm.name=水晶生成
+myst.symbol.DenseOres.name=密集矿物
+myst.symbol.Dungeons.name=地牢
+myst.symbol.EnvAccel.name=加速
+myst.symbol.EnvExplosions.name=随机爆炸
+myst.symbol.EnvLightning.name=闪电
+myst.symbol.EnvMeteor.name=陨石坑
+myst.symbol.EnvScorch.name=燃烧大地
+myst.symbol.Flat.name=平坦世界
+myst.symbol.FloatIslands.name=浮岛
+myst.symbol.GenSpikes.name=尖塔
+myst.symbol.HugeTrees.name=参天巨树
+myst.symbol.LakesDeep.name=幽深湖泊
+myst.symbol.LakesSurface.name=地表湖泊
+myst.symbol.LightingBright.name=明亮光照
+myst.symbol.LightingDark.name=暗淡光照
+myst.symbol.LightingNormal.name=正常光照
+myst.symbol.Mineshafts.name=矿井
+myst.symbol.ModClear.name=清除修改
+myst.symbol.ModGradient.name=渐变
+myst.symbol.MoonDark.name=深色月亮
+myst.symbol.MoonNormal.name=正常月亮
+myst.symbol.NetherFort.name=下界要塞
+myst.symbol.NoHorizon.name=无边天空
+myst.symbol.NoSea.name=无海洋
+myst.symbol.Obelisks.name=方尖碑
+myst.symbol.PvPOff.name=反PvP
+myst.symbol.Rainbow.name=彩虹
+myst.symbol.Ravines.name=峡谷
+myst.symbol.Skylands.name=空岛
+myst.symbol.StarFissure.name=星之裂痕
+myst.symbol.StarsDark.name=深色星星
+myst.symbol.StarsEndSky.name=末影粒子效果
+myst.symbol.StarsNormal.name=正常星星
+myst.symbol.StarsTwinkle.name=闪烁星星
+myst.symbol.Strongholds.name=要塞
+myst.symbol.SunDark.name=深色太阳
+myst.symbol.SunNormal.name=正常太阳
+myst.symbol.Tendrils.name=卷须
+myst.symbol.TerModSpheres.name=球体
+myst.symbol.TerrainAmplified.name=放大化正常世界
+myst.symbol.TerrainEnd.name=岛屿世界
+myst.symbol.TerrainNether.name=洞穴世界
+myst.symbol.TerrainNormal.name=普通世界
+myst.symbol.WeatherCloudy.name=阴天
+myst.symbol.WeatherFast.name=快速变换天气
+myst.symbol.WeatherNorm.name=正常天气
+myst.symbol.WeatherOff.name=无天气
+myst.symbol.WeatherOn.name=永久天气
+myst.symbol.WeatherRain.name=永久雨天
+myst.symbol.WeatherSlow.name=慢速变换天气
+myst.symbol.WeatherSnow.name=永久雪天
+myst.symbol.WeatherStorm.name=永久风暴
+myst.symbol.Villages.name=村落
+myst.symbol.Void.name=虚空世界
