--- a/lang/de_DE.lang
+++ b/lang/de_DE.lang
@@ -1,3 +1,8 @@
+myst.profiling.running=erwarten Lag (Profiling)
+myst.profiling.running.message=Mystcraft wird einen Kuchen backen.
+myst.profiling.complete=Ding!
+myst.profiling.complete.message=Mystcraft Profil komplett
+
 commands.myst.tpx.usage=/tpx [Subjekt:Spieler] <Ziel:Spieler | Ziel:Dimension [x y z]>
 commands.myst.tpx.fail.nosubject=Zu teleportierendes Subjekt ist ungültig. Kein Teleport.
 commands.myst.tpx.fail.noworld=Welt für Dimension %d nicht gefunden. Kein Teleport.
@@ -19,6 +24,10 @@ commands.myst.meteor.usage=/myst-spawnmeteor
 commands.myst.permissions.usage=/myst-permissions <Spieler> <restrict|permit> <entry|depart> <all|Dimension>
 commands.myst.chunkregen.usage=/myst-regenchunk [Bereich]
 
+entity.Mystcraft.myst.book.name=Buch
+entity.Mystcraft.myst.block.name=Fallender Block
+entity.Mystcraft.myst.meteor.name=Meteor
+
 tile.myst.receptacle.name=Buchfach
 tile.myst.unstable.name=Zerfallseffekt
 tile.myst.unstable.blue.name=Blauer Zerfall
@@ -38,17 +47,20 @@ tile.myst.writing_desk.name=Schreibtisch
 
 item.myst.agebook.name=Beschreibungsbuch
 item.myst.linkbook.name=Verbindungsbuch
-item.myst.notebook.name=Notizbuch
+item.myst.folder.name=Sortierungsordner
+item.myst.portfolio.name=Symbol Sammlung
+item.myst.booster.name=Versiegeltes Notizbuch
 item.myst.page.blank.name=Leere Seite
 item.myst.page.panel.name=Verbindungsseite
-item.myst.page.symbol.name=Symbolseite
+item.myst.page.symbol.name=Seite
 item.myst.unlinkedbook.name=Nicht verbundenes Verbindungsbuch
 item.myst.writingdesk.name=Schreibtisch
-item.myst.writingdesk.top.name=Schreibtischrücken
+item.myst.writingdesk.top.name=Schreibtisch Rückwand
 item.myst.vial.name=Tintenampulle
+item.myst.glasses.name=XComp's Brille
 
 itemGroup.mystcraft.common=Mystcraft
-itemGroup.mystcraft.pages=Mystcraft-Seiten
+itemGroup.mystcraft.pages=Mystcraft Seiten
 
 fluid.myst.ink.black=Schwarze Tinte
 tile.myst.fluid.myst.ink.black.name=Schwarze Tinte
@@ -58,93 +70,102 @@ achievement.myst.symbol.desc=Finde ein Symbol
 achievement.myst.write=Die Kunst: Grundlagen
 achievement.myst.write.desc=Kopiere ein Symbol
 achievement.myst.agebook=Eine Reise ohne Rückfahrschein
-achievement.myst.agebook.desc=Erstelle ein Beschreibungsbuch. Vergiss aber nicht, dass dies eine Reise ohne Rückfahrschein ist!
+achievement.myst.agebook.desc=Fertige ein Beschreibungsbuch. Vergesse aber nicht das dies eine Reise ohne Rückfahrschein ist!
 achievement.myst.linkbook=Knüpfe ein Rettungsseil
-achievement.myst.linkbook.desc=Erstelle ein Verbindungsbuch. Gut, nun hast Du einen Weg zurück!
+achievement.myst.linkbook.desc=Fertige ein Verbindungsbuch. Gut, jetzt hast Du einen Weg zurück!
 achievement.myst.quinn=Nenn mich Quinn
-achievement.myst.quinn.desc=Reise ohne Verbindungsbuch in eine Dimension und hoffe auf einen Weg zurück!
+achievement.myst.quinn.desc=Reise ohne Verbindungsbuch in eine Dimension. Aber hoffe auf einen Weg zurück!
 
-linkeffect.disarm.name=Entwaffnen
-linkeffect.generateplatform.name=Plattform generieren
+linkeffect.disarm.name=Entwaffnung
+linkeffect.generateplatform.name=Erzeuge eine Platform
 linkeffect.intralinking.name=Intra-Linking
-linkeffect.maintainmomentum.name=Schwung beibehalten
-linkeffect.relative.name=Relative Verbindung
+linkeffect.maintainmomentum.name=Behalte Schwung
+linkeffect.relative.name=Zugehörige Links
 
-myst.symbol.BioConHuge.name=Riesige Biome
-myst.symbol.BioConLarge.name=Große Biome
-myst.symbol.BioConMedium.name=Mittelgroße Biome
-myst.symbol.BioConNative.name=Native Biomkontrolle
-myst.symbol.BioConSingle.name=Einzelnes Biom
-myst.symbol.BioConSmall.name=Kleine Biome
-myst.symbol.BioConTiled.name=Gekachelte Biome
-myst.symbol.BioConTiny.name=Winzige Biome
-myst.symbol.Caves.name=Höhlen
-myst.symbol.ColorCloud.name=Wolkenfarbe
-myst.symbol.ColorCloudNat.name=Natürliche Wolkenfarbe
-myst.symbol.ColorFog.name=Nebelfarbe
-myst.symbol.ColorFogNat.name=Natürliche Nebelfarbe
-myst.symbol.ColorFoliage.name=Blattwerkfarbe
-myst.symbol.ColorFoliageNat.name=Natürliche Blattwerkfarbe
-myst.symbol.ColorGrass.name=Grasfarbe
-myst.symbol.ColorGrassNat.name=Natürliche Grasfarbe
-myst.symbol.ColorHorizon.name=Sonnenuntergangsfarbe
-myst.symbol.ColorSky.name=Himmelsfarbe
-myst.symbol.ColorSkyNat.name=Natürliche Himmelsfarbe
-myst.symbol.ColorSkyNight.name=Nachthimmelsfarbe
-myst.symbol.ColorWater.name=Wasserfarbe
-myst.symbol.ColorWaterNat.name=Natürliche Wasserfarbe
-myst.symbol.CryForm.name=Kristallformationen
-myst.symbol.DenseOres.name=Dichte Erze
-myst.symbol.Dungeons.name=Verliese
-myst.symbol.EnvAccel.name=Beschleunigt
-myst.symbol.EnvExplosions.name=Spontane Explosionen
-myst.symbol.EnvLightning.name=Blitz und Donner
-myst.symbol.EnvMeteor.name=Meteore
-myst.symbol.EnvScorch.name=Versengte Oberfläche
-myst.symbol.Flat.name=Flache Welt
-myst.symbol.FloatIslands.name=Schwebende Inseln
-myst.symbol.GenSpikes.name=Stacheln
-myst.symbol.HugeTrees.name=Riesige Bäume
-myst.symbol.LakesDeep.name=Untergrundseen
-myst.symbol.LakesSurface.name=Oberflächenseen
-myst.symbol.LightingBright.name=Helles Licht
-myst.symbol.LightingDark.name=Dunkles Licht
-myst.symbol.LightingNormal.name=Normales Licht
-myst.symbol.Mineshafts.name=Minenschächte
-myst.symbol.ModClear.name=Modifizierungen entfernen
-myst.symbol.ModGradient.name=Farbverlauf
-myst.symbol.MoonDark.name=Dunkler Mond
-myst.symbol.MoonNormal.name=Normaler Mond
-myst.symbol.NetherFort.name=Netherfestung
-myst.symbol.NoHorizon.name=Grenzenloser Himmel
-myst.symbol.NoSea.name=Keine Seen
-myst.symbol.Obelisks.name=Obelisken
-myst.symbol.PvPOff.name=Kein PVP
-myst.symbol.Rainbow.name=Regenbogen
-myst.symbol.Ravines.name=Schluchten
-myst.symbol.Skylands.name=Himmelslande
-myst.symbol.StarFissure.name=Sternenkluft
-myst.symbol.StarsDark.name=Dunkle Sterne
-myst.symbol.StarsEndSky.name=Endersternenhimmel
-myst.symbol.StarsNormal.name=Normale Sterne
-myst.symbol.StarsTwinkle.name=Funkelnde Sterne
-myst.symbol.Strongholds.name=Festungen
-myst.symbol.SunDark.name=Dunkle Sonne
-myst.symbol.SunNormal.name=Normale Sonne
-myst.symbol.Tendrils.name=Ranken
-myst.symbol.TerModSpheres.name=Sphären
-myst.symbol.TerrainAmplified.name=Zerklüftete Welt
-myst.symbol.TerrainEnd.name=Inselwelt
-myst.symbol.TerrainNether.name=Höhlenwelt
-myst.symbol.TerrainNormal.name=Standardwelt
-myst.symbol.WeatherCloudy.name=Bewölkt
-myst.symbol.WeatherFast.name=Schnelles Wetter
-myst.symbol.WeatherNorm.name=Normales Wetter
-myst.symbol.WeatherOff.name=Kein Wetter
-myst.symbol.WeatherOn.name=Ewiges Wetter
-myst.symbol.WeatherRain.name=Ewiger Regen
-myst.symbol.WeatherSlow.name=Langsames Wetter
-myst.symbol.WeatherSnow.name=Ewiger Schnee
-myst.symbol.WeatherStorm.name=Ewiger Sturm
-myst.symbol.Villages.name=Dörfer
-myst.symbol.Void.name=Leere Welt
+instability.bonus.death=%s wurde getötet %s, mit aktivierte Bonus-Stabilität!
+instability.bonus.death.partial=%s has died.  Unlocking part of the bonus stability.  Kill them personally to unlock all of it!
+instability.bonus.death.alert=%s has entered the age.  Kill them in order to unlock a temporary stability bonus in this age!
+
+instability.bonus.troll.death=%s has been killed, resetting the instability penalty!
+instability.bonus.troll.alert=%s has entered the age.  The age will slowly become less stable!  Kill them to reset this!
+instability.bonus.troll.left=%s has left the age.  The stability penalty will slowly dissipate.
+
+mystsymbol.BioConGrid.name=Gittermäßige Biomverteilung
+mystsymbol.BioConHuge.name=Riesige Biomverteilung
+mystsymbol.BioConLarge.name=Große Biomverteilung
+mystsymbol.BioConMedium.name=Mittlere Biomverteilung
+mystsymbol.BioConNative.name=Natürliche Biomverteilung
+mystsymbol.BioConSingle.name=Einzel-Biom
+mystsymbol.BioConSmall.name=Kleine Biomverteilung
+mystsymbol.BioConTiled.name=Fliesen-Biomverteilung
+mystsymbol.BioConTiny.name=Winzige Biomverteilung
+mystsymbol.Caves.name=Höhlen
+mystsymbol.ColorCloud.name=Wolkefarbe
+mystsymbol.ColorCloudNat.name=Natürliche Wolkefarbe
+mystsymbol.ColorFog.name=Nebelfarbe
+mystsymbol.ColorFogNat.name=Natürliche Nebelfarbe
+mystsymbol.ColorFoliage.name=Laubfarbe
+mystsymbol.ColorFoliageNat.name=Natürliche Laubfarbe
+mystsymbol.ColorGrass.name=Grassfarbe
+mystsymbol.ColorGrassNat.name=Natürliche Grassfarbe
+mystsymbol.ColorHorizon.name=Sonnenfarbe
+mystsymbol.ColorSky.name=Himmelfarbe
+mystsymbol.ColorSkyNat.name=Natürliche Himmelfarbe
+mystsymbol.ColorSkyNight.name=Nachthimmelfarbe
+mystsymbol.ColorWater.name=Wasserfarbe
+mystsymbol.ColorWaterNat.name=Natürliche Wasserfarbe
+mystsymbol.CryForm.name=Kristalline Formationen
+mystsymbol.DenseOres.name=dichte Erze
+mystsymbol.Dungeons.name=Dungeons
+mystsymbol.EnvAccel.name=Beschleunigt
+mystsymbol.EnvExplosions.name=spontane Explosionen
+mystsymbol.EnvLightning.name=Blitzschlag
+mystsymbol.EnvMeteor.name=Meteore
+mystsymbol.EnvScorch.name=Verbrannte Oberflächen
+mystsymbol.Flat.name=Flache Welt
+mystsymbol.FloatIslands.name=Fliegende Inseln
+mystsymbol.GenSpikes.name=Stacheln
+mystsymbol.HugeTrees.name=riesige Bäume
+mystsymbol.LakesDeep.name=tiefe Flüsse
+mystsymbol.LakesSurface.name=Oberflächen Flüsse
+mystsymbol.LightingBright.name=Helles Licht
+mystsymbol.LightingDark.name=Dunkles Licht
+mystsymbol.LightingNormal.name=Normales Licht
+mystsymbol.Mineshafts.name=Minenschächte
+mystsymbol.ModClear.name=Lösche Modifierer
+mystsymbol.ModGradient.name=Gefälle
+mystsymbol.MoonDark.name=Schwarzer Mond
+mystsymbol.MoonNormal.name=Normaler Mond
+mystsymbol.NetherFort.name=Unterwelt Festung
+mystsymbol.NoHorizon.name=Grenzenloser Himmel
+mystsymbol.NoSea.name=Keine Seen
+mystsymbol.Obelisks.name=Obelisken
+mystsymbol.PvPOff.name=Anti-PvP
+mystsymbol.Rainbow.name=Regenbogen
+mystsymbol.Ravines.name=Schluchten
+mystsymbol.Skylands.name=Skylands
+mystsymbol.StarFissure.name=Sternenriss
+mystsymbol.StarsDark.name=Dunkle Sterne
+mystsymbol.StarsEndSky.name=Ender Sternenfeld
+mystsymbol.StarsNormal.name=Normale Sterne
+mystsymbol.StarsTwinkle.name=Funkelnde Sterne
+mystsymbol.Strongholds.name=Festungen
+mystsymbol.SunDark.name=Schwarze Sonne
+mystsymbol.SunNormal.name=Normale Sonne
+mystsymbol.Tendrils.name=Ranken
+mystsymbol.TerModSpheres.name=Kugeln
+mystsymbol.TerrainAmplified.name=Verstärkte Normale Welt
+mystsymbol.TerrainEnd.name=Inselwelt
+mystsymbol.TerrainNether.name=Höhlenwelt
+mystsymbol.TerrainNormal.name=Standardwelt
+mystsymbol.WeatherCloudy.name=Bedeckter Himmel
+mystsymbol.WeatherFast.name=Schnelles Wetter
+mystsymbol.WeatherNorm.name=Normales Wetter
+mystsymbol.WeatherOff.name=Kein Wtter
+mystsymbol.WeatherOn.name=Ewiges Wetter
+mystsymbol.WeatherRain.name=Ewiger Regen
+mystsymbol.WeatherSlow.name=Langsames Wetter
+mystsymbol.WeatherSnow.name=Ewiger Schnee
+mystsymbol.WeatherStorm.name=Ewiger Sturm
+mystsymbol.Villages.name=Dörfer
+mystsymbol.Void.name=Leere Welt
