--- a/lang/it_IT.lang
+++ b/lang/it_IT.lang
@@ -1,3 +1,8 @@
+myst.profiling.running=Aspetta Ritardo (Profiling)
+myst.profiling.running.message=Mystcraft infornando una torta.
+myst.profiling.complete=Ding!
+myst.profiling.complete.message=Mystcraft Profilatura é Completa
+
 commands.myst.tpx.usage=/tpx [soggetto:giocatore] <obiettivo:giocatore | obiettivo:dim [x y z]>
 commands.myst.tpx.fail.nosubject=L'obiettivo specificato non è valido.
 commands.myst.tpx.fail.noworld=Il mondo della dimensione %d non è raggiungibile.
@@ -32,7 +37,7 @@ tile.myst.unstable.white.name=Instabilità bianca
 tile.myst.unstable.black.name=Instabilità nera
 tile.myst.crystal.name=Cristallo
 tile.myst.lectern.name=Leggio
-tile.myst.bookstand.name=Leggio per libro
+tile.myst.bookstand.name=Leggio per un libro
 tile.myst.linkmodifier.name=Modificatore di collegamenti
 tile.myst.bookbinder.name=Rilegatore di libri
 tile.myst.inkmixer.name=Mescolatore d'inchiostro
@@ -147,7 +152,7 @@ myst.symbol.StarsTwinkle.name=Stelle scintillanti
 myst.symbol.Strongholds.name=Roccaforti
 myst.symbol.SunDark.name=Sole scuro
 myst.symbol.SunNormal.name=Sole normale
-myst.symbol.Tendrils.name=Vittici
+myst.symbol.Tendrils.name=Viticci
 myst.symbol.TerModSpheres.name=Sfere
 myst.symbol.TerrainAmplified.name=Mondo amplificato
 myst.symbol.TerrainEnd.name=Mondo d'isole
@@ -163,4 +168,4 @@ myst.symbol.WeatherSlow.name=Tempo atmosferico lento
 myst.symbol.WeatherSnow.name=Neve eterna
 myst.symbol.WeatherStorm.name=Tempesta eterna
 myst.symbol.Villages.name=Villaggi
-myst.symbol.Void.name=Mondo void
+myst.symbol.Void.name=Mondo vuoto
